--- a/templates/index.html
+++ b/templates/index.html
@@ -358,6 +358,8 @@
         <div style="display: flex; flex-direction: column; gap: 15px;">
             <a href="{{ url_for('add_project_form') }}" class="add-project-link">افزودن پروژه جدید</a>
             <a href="{{ url_for('inventory_route') }}" class="add-project-link" style="background-color: #3498db;">مدیریت انبار</a>
+            <a href="{{ url_for('price_calculator') }}" class="add-project-link" style="background-color: #f39c12;">محاسبه قیمت</a>
+            <a href="{{ url_for('saved_quotes') }}" class="add-project-link" style="background-color: #9b59b6;">قیمت‌دهی‌های ذخیره شده</a>
         </div>
     </div>
     
