تغییر رنگ دکمه برای تست push

--- a/templates/price_calculator.html
+++ b/templates/price_calculator.html
@@ -318,9 +318,9 @@
 
             <div class="d-flex justify-content-center nav-buttons mb-3">
                 <button type="submit" class="btn btn-primary">محاسبه قیمت</button>
-                <button type="button" class="btn btn-success" id="saveQuoteBtn" style="margin-left: 10px;">ذخیره این قیمت</button>
+                <button type="button" class="btn btn-primary" id="saveQuoteBtn" style="margin-left: 10px;">ذخیره این قیمت</button>
                 <a href="{{ url_for('price_calculator') }}" class="btn btn-warning" style="margin-left: 10px;">سفارش جدید (پاک کردن فرم)</a>
-                <a href="{{ url_for('saved_quotes') }}" class="btn btn-info" style="margin-left: 10px;">مشاهده قیمت‌های ذخیره شده</a>
+                <a href="{{ url_for('saved_quotes') }}" class="btn btn-primary" style="margin-left: 10px;">مشاهده قیمت‌های ذخیره شده</a>
             </div>
         </form>
     </div>
