--- a/templates/price_calculator.html
+++ b/templates/price_calculator.html
@@ -321,6 +321,7 @@
                 <button type="button" class="btn btn-primary" id="saveQuoteBtn" style="margin-left: 10px;">ذخیره این قیمت</button>
                 <a href="{{ url_for('price_calculator') }}" class="btn btn-warning" style="margin-left: 10px;">سفارش جدید (پاک کردن فرم)</a>
                 <a href="{{ url_for('saved_quotes') }}" class="btn btn-primary" style="margin-left: 10px;">مشاهده قیمت‌های ذخیره شده</a>
+                <a href="{{ url_for('price_calculator_settings') }}" class="btn btn-secondary" style="margin-left: 10px;">تنظیمات قیمت پایه</a>
             </div>
         </form>
     </div>
